Finish initial implementation
- Represent alcohol with emojis
- Show four different types of alcoholic drink
- Add logic to show possible alcohol consumption in the present and future
- Reverse the display order of days

--- a/Moderation/Localizable.strings
+++ b/Moderation/Localizable.strings
@@ -1,2 +1,6 @@
 "add.button" = "ADD";
 "ml.placeholder" = "mL";
+"moderation" = "Moderation";
+"today" = "Today";
+"tomorrow" = "Tomorrow";
+"yesterday" = "Yesterday";
