Add ABV text field

--- a/Moderation/Localizable.strings
+++ b/Moderation/Localizable.strings
@@ -1,5 +1,6 @@
-"add.button" = "ADD";
-"ml.placeholder" = "mL";
+"abv" = "ABV %";
+"add" = "ADD";
+"ml" = "mL";
 "moderation" = "Moderation";
 "today" = "Today";
 "tomorrow" = "Tomorrow";
