--- a/Moderation/Localizable.strings
+++ b/Moderation/Localizable.strings
@@ -4,9 +4,11 @@
 "cancel" = "Cancel";
 "daily.maximum.format" = "Daily Maximum: %d mL";
 "done" = "Done";
+"input.type" = "Input type";
 "ml" = "mL";
 "ml.per.icon.format" = "Each icon represents %d mL";
 "moderation" = "Moderation";
+"oz" = "oz";
 "settings" = "Settings";
 "settings.header" = "Measurements represent pure ethanol.";
 "today" = "Today";
