Add percent sign to ABV text field
Also limit ABV to 100%

--- a/Moderation/Localizable.strings
+++ b/Moderation/Localizable.strings
@@ -1,4 +1,4 @@
-"abv" = "ABV %";
+"abv" = "ABV";
 "add" = "Add";
 "allow.drinking.on.consecutive.days" = "Allow drinking on consecutive days";
 "cancel" = "Cancel";
